; ModuleID = '/home/carl/AnghaBench/lab/engine/code/tools/lcc/src/extr_bytecode.c_LoadSourceFile.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/tools/lcc/src/extr_bytecode.c_LoadSourceFile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"r\00", align 1
@.str.1 = private unnamed_addr constant [19 x i8] c";couldn't open %s\0A\00", align 1
@sourceFile = common dso_local global i64* null, align 8
@sourceLine = common dso_local global i32 0, align 4
@sourcePtr = common dso_local global i64* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @LoadSourceFile to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @LoadSourceFile(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call i32* @fopen(i8* %5, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %6, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %12, label %9

9:                                                ; preds = %1
  %10 = load i8*, i8** %2, align 8
  %11 = call i32 @print(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0), i8* %10)
  store i64* null, i64** @sourceFile, align 8
  br label %33

12:                                               ; preds = %1
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @filelength(i32* %13)
  store i32 %14, i32* %4, align 4
  %15 = load i32, i32* %4, align 4
  %16 = add nsw i32 %15, 1
  %17 = call i64* @malloc(i32 %16)
  store i64* %17, i64** @sourceFile, align 8
  %18 = load i64*, i64** @sourceFile, align 8
  %19 = icmp ne i64* %18, null
  br i1 %19, label %20, label %29

20:                                               ; preds = %12
  %21 = load i64*, i64** @sourceFile, align 8
  %22 = load i32, i32* %4, align 4
  %23 = load i32*, i32** %3, align 8
  %24 = call i32 @fread(i64* %21, i32 %22, i32 1, i32* %23)
  %25 = load i64*, i64** @sourceFile, align 8
  %26 = load i32, i32* %4, align 4
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds i64, i64* %25, i64 %27
  store i64 0, i64* %28, align 8
  br label %29

29:                                               ; preds = %20, %12
  %30 = load i32*, i32** %3, align 8
  %31 = call i32 @fclose(i32* %30)
  store i32 1, i32* @sourceLine, align 4
  %32 = load i64*, i64** @sourceFile, align 8
  store i64* %32, i64** @sourcePtr, align 8
  br label %33

33:                                               ; preds = %29, %9
  ret void
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @print(i8*, i8*) #1

declare dso_local i32 @filelength(i32*) #1

declare dso_local i64* @malloc(i32) #1

declare dso_local i32 @fread(i64*, i32, i32, i32*) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
